--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Revisão</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">INÍCIO</a>
+            </li>
+            <li>
+                <a href="HTML.html">HTML</a>
+            </li>
+            <li>
+                <a href="CSS.html">CSS</a>
+            </li>
+            <li>
+                <a href="JS.html">JS</a>
+            </li>
+            <li>
+                <a href="GIT.html">GIT</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
