--- a/HTML.html
+++ b/HTML.html
@@ -1,32 +1,80 @@
 <html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML-CSS-JS-GIT</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">INÍCIO</a>
-                </li>
-                <li>
-                    <a href="HTML.html">HTML</a>
-                </li>
-                <li>
-                    <a href="CSS.html">CSS</a>
-                </li>
-                <li>
-                    <a href="JS.html">JS</a>
-                </li>
-                <li>
-                    <a href="GIT.html">GIT</a>
-                </li>
-            </ul>
-        </nav>
-        
-    </body>
-    </html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML-CSS-JS-GIT</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">INÍCIO</a>
+            </li>
+            <li>
+                <a href="HTML.html">HTML</a>
+            </li>
+            <li>
+                <a href="CSS.html">CSS</a>
+            </li>
+            <li>
+                <a href="JS.html">JS</a>
+            </li>
+            <li>
+                <a href="GIT.html">GIT</a>
+            </li>
+        </ul>
+    </nav>
+    <div class="titulo">
+        <h1>Linguagem de Marcação </h1>
+    </div>
+    <main>
+        <section>
+            <section id="texto1">
+                <div class="tx">
+                    <h1>Íncicio:</h1>
+                    <p>É usado "doc" ou "doctype" para <br> começar um projeto no html</p>
+                    <p>Para conectar com CSS é necessário <br> usar "link" e para conectar no JS "script"</p>
+                    <img class="desenho" src="img/body.png" alt="">
+                </div>
+                <div class="tx">
+                    <h1>Tags:</h1>
+                    <p>h1-h6: Título <br> div: Corte <br> img: Imagem (scr="":Para colocar endereço da imagem) <br> br:
+                        Quebra linha
+                        <br> hr: Gera linha <br> th: Cabeçario tabela <br> tr: Coluna tabela <br> Button: botão <br>
+                        a: Ancora link <br> p: Paragráfo <br>
+                    </p>
+                    <p> "<>" Abre "</>" Fecha </p>
+                </div>
+                <div class="tx">
+                    <h1>Atributos de div:</h1>
+                    <p>class: Usado quando tem vários elementos <br> id: Usado quando é apensas um elemento <br>
+                        <a href="file:///C:/Users/crisl/OneDrive/%C3%81rea%20de%20Trabalho/Atividade%20Layouts/index.html"> Clique aqui: Acessar atividade de uso de div</a>
+                    </p>
+                    <h1>Atributos button</h1>
+                    <p>Atributo	Descrição
+                        type: Define o tipo do botão (button, submit, reset) <br>
+                        name: Nome do botão, usado em formulários <br>
+                        value: Valor enviado ao servidor quando o botão é clicado <br>
+                        disabled: Desativa o botão <br>
+                        autofocus: Define que o botão deve ter o foco ao carregar a página <br>
+                        form: Especifica o formulário ao qual o botão pertence <br>
+                        formaction: URL para enviar o formulário <br>
+                        formmethod: Método HTTP (GET ou POST) para enviar o formulário <br>
+                        formtarget: Especifica onde abrir a resposta do formulário <br>
+                        title: Texto que aparece como dica (tooltip) quando o usuário passa o mouse</p>
+                </div>
+            </section>
+            
+
+        </section>
+    </main>
+
+</body>
+
+</html>
+
 </html>
