--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Revisão</title>
 </head>
 <body>
+    <header>
+        <div flex> 
+            <div id="navbar">
+                <img id="icon" src="img/fundo.jpeg" alt="">
+                <img id="icon2" src="img/fundo2.jpeg" alt="">
+            </div>
+        </div>
+    </header>
     <nav>
         <ul>
             <li>
