--- a/HTML.html
+++ b/HTML.html
@@ -35,6 +35,9 @@
         <section>
             <section id="texto1">
                 <div class="tx">
+                    <p>linguagem de marcação usada para estruturar o conteúdo de páginas web. <br>Ele é a base da web, permitindo que você crie documentos com texto, <br>imagens, vídeos, links e outros elementos</p>
+                </div>
+                <div class="tx">
                     <h1>Íncicio:</h1>
                     <p>É usado "doc" ou "doctype" para <br> começar um projeto no html</p>
                     <p>Para conectar com CSS é necessário <br> usar "link" e para conectar no JS "script"</p>
@@ -45,7 +48,7 @@
                     <p>h1-h6: Título <br> div: Corte <br> img: Imagem (scr="":Para colocar endereço da imagem) <br> br:
                         Quebra linha
                         <br> hr: Gera linha <br> th: Cabeçario tabela <br> tr: Coluna tabela <br> Button: botão <br>
-                        a: Ancora link <br> p: Paragráfo <br>
+                        a: Ancora link <br> p: Paragráfo <br> ul, ol, li: Representam listas não ordenadas, ordenadas e itens de lista, respectivamente.
                     </p>
                     <p> "<>" Abre "</>" Fecha </p>
                 </div>
