--- a/index.html
+++ b/index.html
@@ -34,5 +34,18 @@
             </li>
         </ul>
     </nav>
+    <section id="texto2">
+        <div class="tx">
+            <h1>Introdução:</h1>
+            <p>O desenvolvimento web envolve várias tecnologias essenciais para criar sites e aplicativos. <br>
+                 O HTML é a base, organizando o conteúdo da página com textos, imagens e links. O CSS é <br>
+                 o responsável por deixar a página bonita, controlando as cores, fontes e layout. <br>
+                 Para manter o código organizado e colaborar com outras pessoas, usamos Git e GitHub, <br>
+                 que ajudam a controlar as versões e o histórico do projeto. E, por último, o JavaScript <br>
+                 torna a página interativa, permitindo que ela reaja a cliques, movimentos do mouse e outras ações do usuário.</p>
+            
+        </div>
+    </section>
+    
 </body>
 </html>
